--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
+    "@types/matter-js": "^0.19.8",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
