--- a/env.example
+++ b/env.example
@@ -1,2 +1,8 @@
 NEXT_PUBLIC_TRENDSAGE_API_URL=http://127.0.0.1:8000
 NEXT_PUBLIC_CREDBUZZ_API_URL=http://127.0.0.1:8000
+
+# Privy Configuration
+NEXT_PUBLIC_PRIVY_APP_ID=your_privy_app_id_here
+
+# Optional: WalletConnect Project ID (if you want to support WalletConnect)
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=your_walletconnect_project_id_here
