--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "d3": "latest",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "ethers": "^6.14.3",
     "framer-motion": "^12.16.0",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
