--- a/env.example
+++ b/env.example
@@ -1,8 +1,14 @@
-NEXT_PUBLIC_TRENDSAGE_API_URL=http://127.0.0.1:8000
-NEXT_PUBLIC_CREDBUZZ_API_URL=http://127.0.0.1:8000
+NEXT_PUBLIC_CREDBUZZ_API_URL=http://127.0.0.1:8000/
+NEXT_PUBLIC_PRIVY_APP_ID=
 
-# Privy Configuration
-NEXT_PUBLIC_PRIVY_APP_ID=your_privy_app_id_here
+NEXT_PUBLIC_CONTRACT_ADDRESS=
 
-# Optional: WalletConnect Project ID (if you want to support WalletConnect)
-NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=your_walletconnect_project_id_here
+NEXT_PUBLIC_OWNER_ADDRESS=
+NEXT_PUBLIC_CREDBUZZ_ACCOUNT=
+NEXT_PUBLIC_OWNER_SOLANA_ADDRESS= 
+
+# ALPHA
+NEXT_PUBLIC_BASE_API=
+NEXT_PUBLIC_API_KEY=
+NEXT_PUBLIC_BASE_API_NEW=
+NEXT_PUBLIC_AUTHORIZATION_KEY=
