--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@selfxyz/core": "^1.0.5-beta.1",
+    "@selfxyz/qrcode": "^1.0.10-beta.1",
     "apexcharts": "^4.7.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.9.0",
